2010-02-19  Donal K. Fellows  <dkf@users.sf.net>

	* unix/configure.in, unix/Makefile.in: [Bug 2415437]: Corrections to
	allow installation of Tcl and Tk to different directories, especially
	when neither is a system standard location. Also [Tcl Bug 2307398].

	* unix/installManPage: [Tcl Bug 2954638]: Correct behaviour of manual
	page installer. Also added armouring to check that assumptions about
	the initial state are actually valid (e.g., look for existing input
	file).

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags for threaded builds on
	OpenBSD.
	* configure: (regenerated).

2010-02-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkButton.h:	Put all Tk_OptionSpec for buttons and labels
	* generic/tkButton.c:	in const memory. With some changes to win32
	* win/tkWinButton.c:	and macosx, preventing direct writes to
	* unix/tkUnixPort.h:	read-only memory.
	* carbon/tkMacOSXPort.h:
	* macosx/tkMacOSXButton.c:

2010-02-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkMenu.c: [Bug 2952745]: Defer TkMenuOptionTables cleanup to
	CallWhenDeleted() time, to ensure that the record doesn't get freed
	until after all widget instance commands have been deleted.

2010-02-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.decls:	CONSTify everything related to Tk_ConfigSpec
	* generic/tk.h:
	* generic/tkCanvArc.c:	Many tables can now be put in const memory
	* generic/tkCanvas.c:
	* generic/tkCanvBmap.c:
	* generic/tkCanvImg.c:
	* generic/tkCanvLine.c:
	* generic/tkCanvPoly.c:
	* generic/tkCanvPs.c:
	* generic/tkCanvText.c:
	* generic/tkCanvWind.c:
	* generic/tkImgBmap.c:
	* generic/tkImgPhoto.c:
	* generic/tkOldConfig.c:
	* generic/tkRectOval.c:
	* generic/tkScrollbar.c:
	* generic/tkScrollbar.h:
	* generic/tkDecls.h:	(regenerated)
	* doc/CanvTkwin.3:
	* doc/ConfigWidg.3:
	* doc/CrtItemType.3:
	* win/tkWinScrlbr.c:
	* carbon/tkMacOSXScrlbr.c:
	* macosx/tkMacOSXScrlbr.c:
